// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Colors 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <button
      className="button large primary-fill microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      primary
    </button>
  </div>
</div>
`;

exports[`Storyshots Button Default 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <button
      className="button large primary-fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Text
    </button>
  </div>
</div>
`;

exports[`Storyshots Button Disable 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <button
      className="button large primary-fill microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Enable
    </button>
    <button
      className="button large primary-fill microMargin"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      Disabled
    </button>
  </div>
</div>
`;

exports[`Storyshots Button Play Ground 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <button
      className="button large primary-fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Button Text
    </button>
  </div>
</div>
`;

exports[`Storyshots Button Sizes 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <button
      className="button large primary-fill microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Large
    </button>
    <button
      className="button small primary-fill microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      small
    </button>
  </div>
</div>
`;

exports[`Storyshots Button Variants 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <button
      className="button large primary-fill microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      fill
    </button>
    <button
      className="button large primary-outline microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      outline
    </button>
    <button
      className="button large primary-ghost microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      ghost
    </button>
  </div>
</div>
`;

exports[`Storyshots Button With Icon 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <button
      className="button large primary-fill microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg
        className="startIcon"
      />
      Start
    </button>
  </div>
</div>
`;

exports[`Storyshots Checkbox Colors 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <label
      className="checkbox primary checkbox-primary checked microMargin"
    >
      <input
        checked={true}
        className="parent"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      >
        <svg />
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox Default 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <label
      className="checkbox primary checkbox-primary"
      htmlFor="checkbox-playground"
    >
      <input
        checked={false}
        className="parent"
        disabled={false}
        id="checkbox-playground"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      />
    </label>
    <label
      className="checkboxLabel"
      htmlFor="checkbox-playground"
    >
      Check me out!
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox Playground 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <label
      className="checkbox primary checkbox-primary"
      htmlFor="checkbox-playground"
    >
      <input
        checked={false}
        className="parent"
        disabled={false}
        id="checkbox-playground"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      />
    </label>
    <label
      className="checkboxLabel"
      htmlFor="checkbox-playground"
    >
      Hit me!
    </label>
  </div>
</div>
`;

exports[`Storyshots Checkbox States 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <label
      className="checkbox primary checkbox-primary checked microMargin"
    >
      <input
        checked={true}
        className="parent"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      >
        <svg />
      </span>
    </label>
    <label
      className="checkbox primary checkbox-primary microMargin"
    >
      <input
        checked={false}
        className="parent"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      />
    </label>
    <label
      className="checkbox primary checkbox-primary indeterminate microMargin"
    >
      <input
        checked={false}
        className="parent"
        disabled={false}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      >
        <svg />
      </span>
    </label>
    <label
      className="checkbox primary checkbox-primary isDisabled microMargin"
    >
      <input
        checked={false}
        className="parent"
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="iconContainer"
      />
    </label>
  </div>
</div>
`;

exports[`Storyshots IconButton Colors 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <button
      className="button large primary-fill iconButton small fill microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg />
    </button>
  </div>
</div>
`;

exports[`Storyshots IconButton Default 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <button
      className="button large primary-fill iconButton small fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg />
    </button>
  </div>
</div>
`;

exports[`Storyshots IconButton Disable 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <button
      className="button large primary-fill iconButton small fill microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg />
    </button>
    <button
      className="button large primary-fill iconButton small fill microMargin"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <svg />
    </button>
  </div>
</div>
`;

exports[`Storyshots IconButton Play Ground 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <button
      className="button large primary-fill iconButton small fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg />
    </button>
  </div>
</div>
`;

exports[`Storyshots IconButton Sizes 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <button
      className="button large primary-fill iconButton small fill microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg />
    </button>
    <button
      className="button large primary-fill iconButton large fill microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg />
    </button>
  </div>
</div>
`;

exports[`Storyshots IconButton Variants 1`] = `
<div
  className="story-wrapper"
>
  <div
    className="center"
  >
    <button
      className="button large primary-fill iconButton small fill microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg />
    </button>
    <button
      className="button large primary-outline iconButton small outline microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg />
    </button>
    <button
      className="button large primary-ghost iconButton small ghost microMargin"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <svg />
    </button>
  </div>
</div>
`;
